data/derived/sp14/progs/unify/prog4466.ml.out
Characters 194-250:
  | 2 -> Average (build (rand, depth-1)), (build (rand, depth-1))
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
